--- a/challenging-case/Makefile
+++ b/challenging-case/Makefile
@@ -1,5 +1,5 @@
 # trustinsoft/demos
-# Copyright (C) 2023 TrustInSoft
+# Copyright (C) 2023-2024 TrustInSoft
 # mailto:contact AT trust-in-soft DOT com
 # 
 # This program is free software; you can redistribute it and/or
@@ -17,14 +17,10 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 # 
 
-SHELL := /bin/bash
+help: help-specific help-gen
 
-FONT_BOLD := `tput bold`
-FONT_CYAN := `tput setaf 6`
-FONT_RED := `tput setaf 1`
-FONT_RESET := `tput sgr0`
+include ../tools/common.mk
 
-GCC_VERSION := $(shell gcc --version | head -n 1 | cut -d ' ' -f 4 | cut -d '.' -f 1)
 
 
 TIS_ANALYZER := tis-analyzer
@@ -37,12 +33,11 @@ TIS_OPTS := -tis-config-load .trustinsoft/config.json -tis-report
 
 .PHONY: clean test tis-l1 tis-l2
 
-all:
-	@echo "make test:       Runs unit tests"
-	@echo "make tis-l1:     Runs TISA L1 analysis"
-	@echo "make tis-l2:     Runs TISA L2 analysis"
-	@echo "make tis-l1-gui: Runs TISA L1 analysis with the GUI"
-	@echo "make clean:      Cleans everything to revert to the beginning of the demo"
+help-specific:
+	@echo "make test           : Runs unit tests"
+	@echo "make tis-l1         : Runs TISA L1 analysis"
+	@echo "make tis-l2         : Runs TISA L2 analysis"
+	@echo "make tis-l1-gui     : Runs TISA L1 analysis with the GUI"
 
 test:
 	@echo -e "$(FONT_CYAN)$(COMPILER) -I. -fprofile-arcs -ftest-coverage $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
