--- a/new-demo/Makefile
+++ b/new-demo/Makefile
@@ -17,40 +17,26 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 # 
 
-CONFIG_DIR := .trustinsoft
-CONFIG_FILE := $(CONFIG_DIR)/config.json
-TIS_ANALYZER := tis-analyzer
-TIS_REPORT := tis-report
+help: help-specific help-gen
 
-# Don't change the below
-RESULTS_DIR := $(CONFIG_DIR)/results
-LOGS_DIR := $(CONFIG_DIR)/logs
-SAVE_DIR := $(CONFIG_DIR)/save
+include ../tools/common.mk
 
-SHELL := /bin/bash
-FONT_BOLD := `tput bold`
-FONT_CYAN := `tput setaf 6`
-FONT_RED := `tput setaf 1`
-FONT_RESET := `tput sgr0`
 GCC_VERSION := $(shell gcc --version | head -n 1 | cut -d ' ' -f 4 | cut -d '.' -f 1)
 
 TARGET := increment
 FILES := test_driver.c utils.c $(TARGET).c
 OBJS := test_driver.o utils.o $(TARGET).o
 COMPILER := gcc
-CONFIG_FILE := .trustinsoft/config.json
-TIS_OPTS_SHORT := -tis-config-load $(CONFIG_FILE) 
 TIS_OPTS := $(TIS_OPTS_SHORT) -tis-report-directory $(RESULTS_DIR) -tis-report
 
-.PHONY: all test tis-l1 tis-l1-fast tis-l1-seq tis-l1-gui tis-l1-run tis-l1-run-gui tis-l2 tis-l2-gui tis-l2-run tis-l2-run-gui report
+.PHONY: help-specific all-specific test tis-l1 tis-l1-fast tis-l1-seq tis-l1-gui tis-l1-run tis-l1-run-gui tis-l2 tis-l2-gui tis-l2-run tis-l2-run-gui report
 
-all:
-	@echo "make test:       Runs unit tests"
-	@echo "make tis-l1:     Runs TISA L1 analysis"
-	@echo "make tis-l2:     Runs TISA L2 analysis"
-	@echo "make tis-l1-gui: Runs TISA L1 analysis with the GUI"
-	@echo "make tis-l2-gui: Runs TISA L2 analysis with the GUI"
-	@echo "make clean:      Cleans everything to revert to the beginning of the demo"
+help-specific:
+	@echo "make test           : Runs unit tests"
+	@echo "make tis-l1         : Runs TISA L1 analysis"
+	@echo "make tis-l2         : Runs TISA L2 analysis"
+	@echo "make tis-l1-gui     : Runs TISA L1 analysis with the GUI"
+	@echo "make tis-l2-gui     : Runs TISA L2 analysis with the GUI"
 
 test:
 	@echo -e "$(FONT_CYAN)$(COMPILER) -I. -fprofile-arcs -ftest-coverage $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
@@ -63,9 +49,6 @@ test:
 	mv $(TARGET)-$(TARGET).gcda $(TARGET).gcda; \
 	fi
 	gcov $(TARGET).c
-
-cov:
-	$(shell if [ -f $(TARGET).gcno ]then; gcov $(TARGET)-$(TARGET).c; else; gcov $(TARGET).c; fi)
 
 tis-l1-1:
 	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS_SHORT) -tis-config-select-by-name "1.1.small-array"$(FONT_RESET)"
@@ -123,12 +106,3 @@ tis-l1-fast:
 	@../tools/run_all.sh -n 4 -c $(CONFIG_FILE) -a "3 2 4 5"
 
 tis-l2: tis-l2-cli count_ub_2 report
-
-report:
-	@echo "Compiling report from" `ls $(RESULTS_DIR)/*.json | wc -l` "past executed tests"
-	@$(TIS_REPORT) $(RESULTS_DIR)/ --skip-file test_driver.c,utils.c
-	@printf "\nCheck generated test report $(FONT_CYAN)tis_report.html$(FONT_RESET)\n\n"
-
-tis-misra:
-	tis-misra --title "DEMO" increment.c
-	@printf "\nCheck generated test report $(FONT_CYAN)tis_misra_report/index.html$(FONT_RESET)\n\n"
