--- a/subtle-ub/Makefile
+++ b/subtle-ub/Makefile
@@ -16,37 +16,23 @@
 # along with this program; if not, write to the Free Software Foundation,
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 # 
-CONFIG_DIR := .trustinsoft
-CONFIG_FILE := $(CONFIG_DIR)/config.json
-TIS_ANALYZER := tis-analyzer
-TIS_REPORT := tis-report
 
-# Don't change the below
-RESULTS_DIR := $(CONFIG_DIR)/results
-LOGS_DIR := $(CONFIG_DIR)/logs
-SAVE_DIR := $(CONFIG_DIR)/save
+help: help-specific help-generic
 
-SHELL := /bin/bash
-
-FONT_BOLD := `tput bold`
-FONT_CYAN := `tput setaf 6`
-FONT_RED := `tput setaf 1`
-FONT_RESET := `tput sgr0`
+include ../tools/colors.mk
 
 TARGET := demo-ub
 FILES := test_driver.c increment.c logutils.c
-CONFIG_FILE := .trustinsoft/config.json
-TIS_OPTS_SHORT := -tis-config-load $(CONFIG_FILE) 
 TIS_OPTS := $(TIS_OPTS_SHORT) -val-profile interpreter -val -I. -tis-report-directory $(RESULTS_DIR) -tis-report
 
 .PHONY: ut ut-gcc ut-clang ut-gcc-tis clean tis tis_gui
 
-all:
-	@echo "make gcc:            Run code and tests compiled with gcc"
-	@echo "make gcc-verbose:    Run code and tests compiled with gcc and verbose logs"
-	@echo "make clang:          Run code and tests compiled with clang and verbose logs"
-	@echo "make gcc-long:       Run code and tests compiled with gcc and a longer string"
-	@echo "make tis:            Run code with TrustInSoft Analyzer L1"
+help-specific:
+	@echo "make gcc            : Run code and tests compiled with gcc"
+	@echo "make gcc-verbose    : Run code and tests compiled with gcc and verbose logs"
+	@echo "make clang          : Run code and tests compiled with clang and verbose logs"
+	@echo "make gcc-long       : Run code and tests compiled with gcc and a longer string"
+	@echo "make tis            : Run code with TrustInSoft Analyzer L1"
 
 gcc:
 	@echo -e "$(FONT_CYAN)gcc -I. $(FILES) -o $(TARGET) && ./$(TARGET)$(FONT_RESET)"
@@ -78,6 +64,3 @@ count_ub:
 tis-gui:
 	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) $(FILES) -gui$(FONT_RESET)"
 	@$(TIS_ANALYZER) $(TIS_OPTS) -gui
-
-clean:
-	@rm -rf $(TARGET) *.gc* compile_commands.json $(RESULTS_DIR)/ $(LOGS_DIR)/ $(SAVE_DIR)/ tis_report.html tis_misra_report
