--- a/overapprox/Makefile
+++ b/overapprox/Makefile
@@ -16,17 +16,13 @@
 # along with this program; if not, write to the Free Software Foundation,
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 # 
-SHELL := /bin/bash
 
-FONT_BOLD := `tput bold`
-FONT_CYAN := `tput setaf 6`
-FONT_RED := `tput setaf 1`
-FONT_RESET := `tput sgr0`
+help: help-specific help-generic
 
-TIS_ANALYZER := tis-analyzer
+include ../tools/common.mk
+
 TARGET := approx
 FILES := approx.c
-COMPILER := gcc
 TIS_OPTS := -val-profile analyzer -val -I.
 
 .PHONY: all clean tis tis-gui
@@ -70,5 +66,6 @@ tis-5s:
 tis-6:
 	$(TIS_ANALYZER) $(TIS_OPTS) -main testn -slevel 10000 -val-split-return-function approx:full $(FILES)
 
-clean:
-	@rm -rf $(TARGET) compile_commands.json
+clean: clean-generic
+
+report: report-generic
