--- a/caesar-c/Makefile
+++ b/caesar-c/Makefile
@@ -47,7 +47,7 @@ tis-l1-run:
 	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "1.positive-shift" | grep -v '\[info\]'
 	@$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name "2.negative-shift" | grep -v '\[info\]'
 	@echo "==============================================="
-	@echo "      " `trustinsoft/count_ub.sh _results/[12].*-shift_results.json` UNDEFINED BEHAVIORS FOUND
+	@echo "      " `trustinsoft/count-ub.sh _results/[12].*-shift_results.json` UNDEFINED BEHAVIORS FOUND
 	@echo "==============================================="
 
 tis-l1: tis-l1-run report
@@ -58,14 +58,14 @@ tis-l2-run:
 	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -D LEVEL2$(FONT_RESET)"
 	@$(TIS_ANALYZER) $(TIS_OPTS) -D LEVEL2 -tis-config-select-by-name "3.generalized-shift" | grep -v '\[info\]'
 	@echo "==============================================="
-	@echo "      " `trustinsoft/count_ub.sh _results/3.generalized-shift_results.json` UNDEFINED BEHAVIORS FOUND
+	@echo "      " `trustinsoft/count-ub.sh _results/3.generalized-shift_results.json` UNDEFINED BEHAVIORS FOUND
 	@echo "==============================================="
 
 tis-l2-step2-run:
 	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -D LEVEL2 -D LEVEL2_STEP2$(FONT_RESET)"
 	@$(TIS_ANALYZER) $(TIS_OPTS) -D LEVEL2 -D LEVEL2_STEP2 -tis-config-select-by-name "4.generalized-string" | grep -v '\[info\]'
 	@echo "==============================================="
-	@echo "      " `trustinsoft/count_ub.sh _results/4.generalized-string_results.json` UNDEFINED BEHAVIORS FOUND
+	@echo "      " `trustinsoft/count-ub.sh _results/4.generalized-string_results.json` UNDEFINED BEHAVIORS FOUND
 	@echo "==============================================="
 
 tis-l2-step2: tis-l2-step2-run report
@@ -82,13 +82,10 @@ tis-l2-step2-gui:
 	@echo -e "$(FONT_CYAN)$(TIS_ANALYZER) $(TIS_OPTS) -tis-config-select-by-name 4.generalized-string -D LEVEL2=1 -gui$(FONT_RESET)"
 	@$(TIS_ANALYZER) $(TIS_OPTS) -gui -D LEVEL2 -D LEVEL2_STEP2 -tis-config-select-by-name "4.generalized-string" 
 
-report:
-	@echo "Compiling report from" `ls _results/*.json | wc -l` "past executed tests"
-	@tis-report _results/ --skip-file test_driver.c
-	@printf "\nCheck generated test report $(FONT_CYAN)tis_report.html$(FONT_RESET)\n\n"
+report: report-generic
 
 break_build:
 	@! cat _results/*_results.json|jq '{status: .alarms.status}'|grep -H '"status": "NOT OK"'
 
-clean:
+clean: clean-generic
 	@rm -rf a.out a.out.dSYM caesar caesar.dSYM *.gcov *.gcda *.gcno _results tis_report.html tis_misra_report *.log */*.log compile_commands.json
